force-app/main/default/objects/ContentVersion/fields/Original_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The original Document ID this ContentVersion was converted from.</description>
    <externalId>true</externalId>
    <inlineHelpText>The original Document ID this ContentVersion was converted from.</inlineHelpText>
    <label>Original Record ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>