force-app/main/default/objects/ContentVersion/fields/Original_Record_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Owner_ID__c</fullName>
    <description>The owner ID of the original Docuent that was converted.</description>
    <inlineHelpText>The owner ID of the original Docuent that was converted.</inlineHelpText>
    <label>Original Record Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>