force-app/main/default/objects/ContentVersion/fields/Original_Record_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Parent_ID__c</fullName>
    <description>The original Document parent ID this ContentVersion was converted from.</description>
    <inlineHelpText>The original Document parent ID this ContentVersion was converted from.</inlineHelpText>
    <label>Original Record Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>